--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="#">Baixar meu Ebook</a>
         </li>
         <li>
-          <a href="https://github.com/maykbrito">Veja meu portifolio</a>
+          <a href="https://github.com/rubensreinaldo80">Veja meu portifolio</a>
         </li>
         <li>
           <a href="https://rocketseat.com.br/explorer" target="_blank"
@@ -36,7 +36,7 @@
         </li>
       </ul>
       <div id="social-Links">
-        <a hre="https://github.com./maykbrito" target="_blank">
+        <a hre="https://github.com./rubensreinaldo80" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
@@ -44,7 +44,7 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a hre="https://youtube.com./maykbrito" target="_blank">
+        <a hre="https://youtube.com./rubensreinaldo80" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
